update for fall 2016

--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
                         <p class="text-muted">Asymptotics, Algorithms Hashing, Heaps, Sorting, Trees, Bounds, Graphs</p>
                     </div>
                 </div>
+                 <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary"></i>
+                        <h3>Computer Graphics</h3>
+                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Camera Simulation, and 3D Animation</p>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x  fa-desktop wow bounceIn text-primary" data-wow-delay=".3s"></i>
@@ -263,22 +271,22 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa14/proj/scheme/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/scheme.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    SOMETHING
+                                    Computer Architecture
                                 </div>
                                 <div class="project-name">
-                                    Scheme Interpreter </br> Developed a Scheme Interpreter in Python that demonstrates our understanding of both Object-Oriented Programming and Functional Programming while utilizing the basics of programming such as recursion,  lists, lambda functions, and inheritance. (link goes to project specifications)
+                                    Scheme Interpreter </br> Interpreter for a subset of the Scheme language using Python. (link goes to project specifications)
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/02_1/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/Mips.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
