update for fall 2016

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
                     <hr class="light">
                     <img class="img-circle" src="img/linkedinphoto.jpg">
-                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
+                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I am a junior at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation, however and still open to anything. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, working out, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
                 </div>
             </div>
         </div>
@@ -110,15 +110,15 @@
                 <div class="col-lg-2 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary"></i>
-                        <h3>Computer Graphics</h3>
-                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Camera Simulation, and 3D Animation</p>
+                        <h3>Computer Graphics & Animation</h3>
+                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Camera Simulation, 3D Animation(Maya)</p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-film wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Animation</h3>
-                        <p class="text-muted">Modeling, Shading, Texturing, Lighting, Rigging, Animating</p>
+                        <i class="fa fa-4x fa-terminal wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Structure and Interpretation of Computer Programs</h3>
+                        <p class="text-muted"> Object Oriented Programming, Functional Programming, Recursion, Interpreters, Data Abstraction</p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 text-center">
@@ -129,13 +129,6 @@
                     </div>
                 </div>
                  <div class="row">
-                <div class="col-lg-2 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary"></i>
-                        <h3>Computer Graphics</h3>
-                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Camera Simulation, and 3D Animation</p>
-                    </div>
-                </div>
                 <div class="col-lg-2 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x  fa-desktop wow bounceIn text-primary" data-wow-delay=".3s"></i>
