update for fall 2016

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cpu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -258,6 +258,21 @@
                                 </div>
                                 <div class="project-name">
                                     CPU, ALU, and Regfile</br> Designed a CPU(central processing unit) on Logism by first designing the ALU(arithmetic logic unit), register file, memory, and pipelining the CPU. (link goes to project specifications)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div> -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="cello_play_blast.mov" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/cpu.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation
+                                </div>
+                                <div class="project-name">
+                                    Cello Model</br> (link goes to video)
                                 </div>
                             </div>
                         </div>
