--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                     </a>
                 </div> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="cello_play_blast.mov" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/cpu.jpg" class="img-responsive" alt="">
+                    <a href="cello_play_blast.mov " target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
