--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     </a>
                 </div> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="cello_play_blast.mov " target="_blank" class="portfolio-box portfolio-link">
+                    <a href="http://imgur.com/karxPfA" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
