--- a/index.html
+++ b/index.html
@@ -204,6 +204,21 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="https://www.youtube.com/watch?v=UUCIodYeeBQ" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation
+                                </div>
+                                <div class="project-name">
+                                    A Tail Tale (Warning: Links to a video)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -218,21 +233,6 @@
                         </div>
                     </a>
                 </div>
-               <!--  <div class="col-lg-4 col-sm-6">
-                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/cpu.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Computer Architecture
-                                </div>
-                                <div class="project-name">
-                                    CPU, ALU, and Regfile</br> Designed a CPU(central processing unit) on Logism by first designing the ALU(arithmetic logic unit), register file, memory, and pipelining the CPU. link goes to project specifications)
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div> -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="cs184_proj_4/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
@@ -293,7 +293,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+               <!--  <div class="col-lg-4 col-sm-6">
                     <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/02_1/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/Mips.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -307,7 +307,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
