--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://www.youtube.com/watch?v=UUCIodYeeBQ" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
+                        <img src="img/A_Tail_Tale2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
