will finish tomorrow with better internet

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="https://www.youtube.com/watch?v=UUCIodYeeBQ" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/A_Tail_Tale2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -217,8 +217,8 @@
                             </div>
                         </div>
                     </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
+                </div> -->
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -232,7 +232,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> --> <!-- add this after friday again -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="cs184_proj_4/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
@@ -278,7 +278,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <a href="http://www-inst.eecs.berkeley.edu/~cs61a/fa14/proj/scheme/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/scheme.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -292,7 +292,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> --> <!-- add this after friday -->
                <!--  <div class="col-lg-4 col-sm-6">
                     <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/02_1/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/Mips.jpg" class="img-responsive" alt="">
