--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                     Animation
                                 </div>
                                 <div class="project-name">
-                                    Cello Model</br> (link goes to video)
+                                    Cello Model</br> (link goes to turntable gif)
                                 </div>
                             </div>
                         </div>
