--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
                     <hr class="light">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
-                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I am a junior at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation, however and still open to anything. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, working out, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
+                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I am a junior at the University of California, Berkeley as an electrical engineering and computer science major. I'm am still actively looking at all areas of computer science to find where I want to focus my career around. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, working out, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
                 </div>
             </div>
         </div>
