--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="header-content-inner">
                 <h1>Vincent Escueta</h1>
                 <hr>
-                <p>computer scientist, animator, engineer<br/>EECS Undergrad at the University of California, Berkeley</p>
+                <p>SOFTWARE/GRAPHICS ENGINEER<br/>EECS Undergrad at the University of California, Berkeley</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
             </div>
         </div>
