mistakes were made

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Architecture
+                                    Structure and Interpretation of Computer Programss
                                 </div>
                                 <div class="project-name">
                                     Scheme Interpreter </br> Interpreter for a subset of the Scheme language using Python. (link goes to project specifications)
