fixed a broken link

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="http://datastructur.es/sp15/materials/proj/proj2/proj2.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
