--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="section-heading">Hi! Let me tell you a little bit about myself.</h2>
                     <hr class="light">
                     <img class="img-circle" src="img/Vincent_Escueta1.jpg" height="288">
-                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I am a junior at the University of California, Berkeley as an electrical engineering and computer science major. I'm am still actively looking at all areas of computer science to find where I want to focus my career around. Some topics I've really enjoyed so far is Artificial Intelligence, Computer Graphics, and Animation. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, bowling, cooking, baking, playing basketball, watching movies, drawing, and going on spontaneous adventures.</p>
+                    <p class="text-faded">I am Vincent Escueta from Diamond Bar, California and I am a senior at the University of California, Berkeley as an electrical engineering and computer science major. I'm am still actively looking at all areas of computer science to find where I want to focus my career around. Some topics I've really enjoyed so far is Artificial Intelligence, Computer Graphics, and Animation. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, bowling, cooking, baking, playing basketball, watching movies, drawing, and going on spontaneous adventures.</p>
                 </div>
             </div>
         </div>
@@ -203,6 +203,21 @@
                         </div>
                     </a>
                 </div>
+                 <div class="col-lg-4 col-sm-6">
+                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/rory.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Animation
+                                </div>
+                                <div class="project-name">
+                                    Stargazing (Warning: Links to a video)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
@@ -233,7 +248,7 @@
                         </div>
                     </a>
                 </div> -->
-                 <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cpu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -278,21 +293,6 @@
                         </div>
                     </a>
                 </div> 
-                <div class="col-lg-4 col-sm-6">
-                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/02_1/" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/Mips.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Computer Architecture
-                                </div>
-                                <div class="project-name">
-                                    MIPS Assembler</br> Assembler that takes in MIPS instructions and turns those instructions into machine code. Afterword, a MIPS Linker from a later project takes object code files and outputs executable files. (link goes to project specifications)
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
             </div>
         </div>
     </section>
@@ -333,7 +333,7 @@
                 </div>
             </div>
         </div>
-        <p class="text-center">Last Updated: June 10, 2017</p>
+        <p class="text-center">Last Updated: July 26, 2017</p>
     </section>
 
     <!-- jQuery -->
