--- a/index.html
+++ b/index.html
@@ -96,51 +96,17 @@
         </div>
     </section>
 
-    <section id="portfolio">
-        <div class="container">
+    
+
+    <section class="no-padding" id="portfolio">
+<!--         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
                     <hr class="primary">
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary"></i>
-                        <h3>Computer Graphics & Animation</h3>
-                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Camera Simulation, 3D Animation(Maya)</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-terminal wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Structure and Interpretation of Computer Programs</h3>
-                        <p class="text-muted"> Object Oriented Programming, Functional Programming, Recursion, Interpreters, Data Abstraction</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-save wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Data Structures</h3>
-                        <p class="text-muted">Asymptotics, Algorithms Hashing, Heaps, Sorting, Trees, Bounds, Graphs</p>
-                    </div>
-                </div>
-                 <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x  fa-desktop wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Computer Architecture</h3>
-                        <p class="text-muted">Abstraction, Moore's Law, Principle of Locality, Parallelism, Dependability via Redundancy</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
+        </div> -->
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
@@ -233,7 +199,7 @@
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
+<!--                 <div class="col-lg-4 col-sm-6">
                     <a href="http://imgur.com/karxPfA" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
@@ -249,15 +215,15 @@
                     </a>
                 </div> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/cpu.jpg" class="img-responsive" alt="">
+                    <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/uccc2018.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Computer Architecture
                                 </div>
                                 <div class="project-name">
-                                    CPU, ALU, and Regfile</br> Designed a CPU(central processing unit) on Logism by first designing the ALU(arithmetic logic unit), register file, memory, and pipelining the CPU. (link goes to project specifications)
+                                    University Catholic Conference of California 2018 Website
                                 </div>
                             </div>
                         </div>
