--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Architecture
+                                    Web Development
                                 </div>
                                 <div class="project-name">
                                     University Catholic Conference of California 2018 Website
