no mroe passwords

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
                     </a>
                 </div>
-<!--                 <div class="col-lg-4 col-sm-6"> test
+<!--                 <div class="col-lg-4 col-sm-6">
                     <a href="http://imgur.com/karxPfA" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/cello_its_me.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
