image project uploaded

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </a>
                 </div>
                  <div class="col-lg-4 col-sm-6">
-                    <a href="https://inst.eecs.berkeley.edu/~cs194-26/fa17/hw/proj1/" target="_blank" class="portfolio-box portfolio-link">
+                    <a href="Images/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/coloring.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -178,7 +178,7 @@
                                     Image Manipulation and Computational Photography
                                 </div>
                                 <div class="project-name">
-                                    Images of the Russian Empire: Coloring the Prokudin-Gorskii Photo Collection (coming soon)
+                                    Images of the Russian Empire: Coloring the Prokudin-Gorskii Photo Collection
                                 </div>
                             </div>
                         </div>
@@ -314,7 +314,7 @@
                 </div>
             </div>
         </div>
-        <p class="text-center">Last Updated: August 28, 2017</p>
+        <p class="text-center">Last Updated: September 5, 2017</p>
     </section>
 
     <!-- jQuery -->
