--- a/Images/index.html
+++ b/Images/index.html
@@ -338,7 +338,7 @@
                     <figcaption align="middle">Figure 30: all pixels of emir.tif: R:[107  17] G:[-3  7] TIME:14.2561810017</figcaption></td>
                     <td align="middle">
                     <img src="img/emirNaiveColored.jpg" width="500px" />
-                    <figcaption align="middle">Figure 2831 middle 50% of pixels emir.tif: R:[ 258 -213] G:[48 24] TIME:13.4975399971</figcaption></td>
+                    <figcaption align="middle">Figure 31: middle 50% of pixels emir.tif: R:[ 258 -213] G:[48 24] TIME:13.4975399971</figcaption></td>
                 </tr>
             </table>
             <table style="width=100%">
